# clarioai-core

./: .gitignore  README.md  pyproject.toml
app/: __init__.py  crud.py  database.py  main.py
app/auth/: auth_utils.py  dependencies.py
app/crud/: tasks.py  workspaces.py
app/models/: analysis_orm.py  routine_orm.py  task_orm.py  task_routine_orm.py  tasks.py  user_orm.py  users.py  workspace_orm.py
app/routers/: __init__.py  analysis.py  auth.py  routines.py  tasks.py  users.py
app/schemas/: analysis.py  routine.py  task_routine.py  tasks.py  users.py  workspace.py
migrations/: env.py
migrations/versions/: a0075eee0b47_test_check.py
